<resources>
    <string name="app_name">Pick App</string>
    <string name="signIn">Sign in</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="loginNotFound">Login not found</string>
    <string name="wrongPass">Wrong password</string>
    <string name="app_logo">App logo</string>
    <string name="menu_basketball">Basketball game</string>
    <string name="menu_soccer">Soccer game</string>
    <string name="menu_volleyball">Volley game</string>
    <string name="menu_baseball">Baseball game</string>
    <string name="game_date">Game date</string>
    <string name="game_time">Game time</string>
    <string name="players_number">How many players on each team?</string>
    <string name="team_rotation">Will there be players rotation?</string>
    <string name="save_game">Save game</string>
    <string name="btnConfirm">Confirm</string>
    <string name="title_activity_pelada">Pick App</string>
    <string name="title_home">Home</string>
    <string name="title_new_game">Create a pick up game</string>
    <string name="title_my_games">My pick up games</string>
    <string name="title_settings">Settings</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="nameGame">Name of the Game</string>
    <string name="other">Other</string>
    <string name="location">Location</string>
    <string name="logout">Logout</string>
    <string name="friends">Friends</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="invite_friend">Invite a Friend</string>
</resources>
