<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".SettingsFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <Button
                    android:text="@string/invite_friend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/button2"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
            <Button
                    android:text="@string/edit_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/btnEditProfile"
                    style="@style/Widget.AppCompat.Button.Colored"/>
            <Button
                    android:text="@string/friends"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/btnFriends"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
            <Button
                    android:text="@string/logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/btnLogout"
                    style="@style/Widget.AppCompat.Button.Colored"/>
        </LinearLayout>
    </ScrollView>

</FrameLayout>