<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/loginText"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/ballLogo"
            android:hint="@string/login"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordText" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/loginText" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/password"/>
    <Button
            android:text="@string/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signInBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/registerBtn"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/passwordText"/>
    <Button
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registerBtn"
            app:layout_constraintStart_toEndOf="@+id/signInBtn" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordText"/>
    <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp" app:srcCompat="@drawable/ball"
            android:id="@+id/ballLogo" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/loginNotFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginMessage" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordText" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/signInBtn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="18sp" android:textColor="@android:color/holo_red_dark" android:visibility="invisible"/>
</android.support.constraint.ConstraintLayout>